--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ data/part1_collection/llm_generated_data_hidden.xlsx
 data/part1_collection/human_generated_data_hidden.xlsx
 data/part2_classification/final_results/final_hidden.xlsx
 llm_audio_testcase/plots/originals
+llm_audio_testcase/stats/kl_leibler_divergence_weighted.ipynb
